# baddy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
accounts/: admin.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  custom_user.py
apps/accounts/: urls.py  views.py
apps/dashboards/: dependencies.py  urls.py  views.py
assets/js/: main.js
baddy/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
baddy/settings/: __init__.py  admin.py  base.py  development.py  production.py  seed.py
baddy/templatetags/: vite.py
dashboard/interfaces/: dataset_repository_interface.py
dashboard/models/: dataset.py
dashboard/repositories/: dataset_database_repository.py
dashboards/: access_control.py  admin.py  dependencies.py  urls.py  views.py
dashboards/factories/: dataset_factory.py
dashboards/interfaces/: dataset_repository_interface.py  service.py
dashboards/meta/: singleton_meta.py
dashboards/migrations/: 0001_initial.py  0002_remove_dashboard_image_name_dashboard_image.py  0003_dashboard_enabled.py  0004_alter_dashboard_enabled_alter_dashboard_view_name.py  0005_alter_dashboard_view_name.py
dashboards/models/: dashboard.py  dataset.py
dashboards/repositories/: dataset_database_repository.py  (+2 more)
production/: nginx.conf  start.sh
scripts/: start.sh
templates/: 403.html  404.html  _auth_base.html  _base.html  _container.html  _error.html  _header.html
(+68 files in other folders)
