[tool.poetry]
name = "baddy"
version = "0.1.0"
description = ""
authors = ["Angus <angus.goody@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
django-compressor = "^4.5.1"
gunicorn = "^23.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
