[tool.poetry]
name = "baddy"
version = "0.0.1"
description = ""
authors = ["Angus <angus.goody@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
faker = "^36.1.1"
django-cors-headers = "^4.7.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
